deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: protopro
  labels:
    app.kubernetes.io/part-of: protopro
